# Governance

./: .eslintignore  .gitignore  .prettierrc.js  LICENSE  README.md  build.sh  deployedContracts.azero.testnet.json  package.json  runTests.sh  runWithoutWarnings.ts  tsconfig.json  updateTestDbBackup.sh
scripts/: ansiToHtml.ts  fixupNodeLog.ts  types_and_consts.ts
scripts/compile/: common.ts  compileAllContracts.ts  compileAllContractsDocker.ts  compileSingleContract.ts
scripts/typechain/: addFileNameAsProperty.ts  fixContractAbiImport.ts  fixPropertyCasing.ts  generateEventsEnum.ts  query.ts  removeCommas.ts  removeReturnTypesRef.ts  replaceHandleReturnType.ts  replaceQueryCalls.ts
src/: .rustfmt.toml  Cargo.toml  lib.rs  rust-toolchain.toml
src/contracts/block_timestamp_provider/: Cargo.toml  lib.rs
src/contracts/governance_token/: Cargo.toml  lib.rs
src/contracts/governance_token_minter/: Cargo.toml  lib.rs
src/contracts/governor/: Cargo.toml  lib.rs
src/contracts/hasher/: Cargo.toml  lib.rs
src/contracts/psp22_mintable/: Cargo.toml  lib.rs
src/contracts/staker/: Cargo.toml  lib.rs
src/contracts_impls/: mod.rs
src/contracts_impls/govern/impls/: mod.rs  storage.rs
src/contracts_impls/govern/traits/: errors.rs  events.rs  mod.rs  structs.rs
src/contracts_impls/stake/impls/: mod.rs  storage.rs
src/contracts_impls/stake/impls/storage/: data.rs
src/contracts_impls/stake/traits/: errors.rs  events.rs  mod.rs  structs.rs
src/contracts_impls/timestamp_mock/impls/: mod.rs  storage.rs
src/contracts_impls/timestamp_mock/traits/: mod.rs
tests/: consts.ts  deployment.test.ts  governor.test.ts  hasher.test.ts  soft-assert.ts  stake.test.ts  timestamp_provider.test.ts
tests/setup/: ApiProviderWrapper.ts  chai.ts  deployTest.ts  deployTestnet.ts  deploymentHelpers.ts  helpers.ts  nodePersistence.ts  reserveTokensToDeploy.json  testEnvConsts.ts
tests/types/: PSP22Metadata.ts
tests/utlis/: make-suite.ts  misc.ts
tests/utlis/checkers/governor/: claimReward.ts  execute.ts  finalize.ts  propose.ts  slashVoter.ts  vote.ts
tests/utlis/checkers/staker/: initializeUnstake.ts  reward.ts  slash.ts  stake.ts  unstake.ts
tests/utlis/converters/: hex-number.ts
