[package]
name = "governance_token_minter"
version = "0.0.1"
authors = [""]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false}
scale = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.7", default-features = false, features = ["derive"], optional = true }

openbrush = { tag = "4.0.0-beta", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["psp22"] }

lending_project = { path = "../..", default-features = false }

[lib]
name = "governance_token_minter"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "lending_project/std",
    "openbrush/std",
]
ink-as-dependency = []