[package]
name = "governor"
version = "0.1.0"
authors = ["Konrad Wierzbik <konrad.wierzbik@gmail.com", "Łukasz Łakomy <wookie.xp.07@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.2", default-features = false}
scale = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.7", default-features = false, features = ["derive"], optional = true }

openbrush = { tag = "3.1.1", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["psp22", "psp34", "ownable", "pausable", "access_control"] }

abax_governance = { path = "../..", default-features = false }

[lib]
name = "governor"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "abax_governance/std",
    "openbrush/std",
    
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16            # Use slightly better optimizations.
overflow-checks = false 

[profile.release]
overflow-checks = false 
