[package]
name = "psp22_mintable"
version = "0.1.0"
authors = ["openbrush"]
edition = "2021"

[dependencies]
ink = { version = "~4.0.0", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.4", default-features = false, features = ["derive"], optional = true }

openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["psp22", "psp34", "ownable", "pausable", "access_control"] }

abax_governance = { path = "../..", default-features = false }

[lib]
name = "psp22_mintable"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "abax_governance/std",
    "openbrush/std",
    
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16            # Use slightly better optimizations.
overflow-checks = false 

[profile.release]
overflow-checks = false 
